<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingActivity">

    <ImageButton
        android:id="@+id/add_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Retour"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/add_return"
        app:layout_constraintLeft_toRightOf="@+id/add_return"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_object_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="Objet de la réunion"
        app:layout_constraintTop_toBottomOf="@id/add_return">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_object"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_date_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="Date de la réunion"
        app:layout_constraintTop_toBottomOf="@+id/add_object_meeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_date"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_hour_meeting"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:hint="Debut de la réunion"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/add_date_meeting"
        app:layout_constraintLeft_toLeftOf="@+id/add_date_meeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_start_hour"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_minute_meeting"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:hint="Fin de la  réunion"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/add_date_meeting"
        app:layout_constraintRight_toRightOf="@+id/add_date_meeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_end_hour"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_mail_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:hint="Mail des personnes conviées à la réunion"
        app:layout_constraintTop_toBottomOf="@id/add_hour_meeting">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_mail_people"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_button_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Créer"
        app:layout_constraintTop_toBottomOf="@id/add_mail_people"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="12dp"
        android:gravity="center" />

    <Spinner
        android:id="@+id/spinner_hall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleY="1.2"
        android:scaleX="1.2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salle"
        app:layout_constraintRight_toLeftOf="@+id/spinner_hall"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="4dp"
        android:layout_marginTop="13dp"
        android:textSize="16sp"
        android:textStyle="bold" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>